Fixed page/nav spacing

--- a/src/components/ExpertSection/style.css
+++ b/src/components/ExpertSection/style.css
@@ -34,7 +34,7 @@
 
 .server-align {
   margin-left: -3.5px !important;
-  margin-top: -3.5px !important;
+  margin-top: -2.5px !important;
 }
 
 .cog-align {
