--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,14 +1,14 @@
 #nav-container {
   min-height: 100vh;
   background-color: #1bbec3;
-  margin-left: 0;
-  margin-right: 7.5%;
   color: rgb(8, 8, 8);
   text-align: center;
   position: fixed;
-  width: 278px;
+  width: 300px;
   bottom: 0;
   top: 0;
+  right: 75%;
+  margin-right: 0;
 }
 
 #nav-row {
